fix <navbar>: improv spacing within navbar in small devices

--- a/styles.css
+++ b/styles.css
@@ -119,13 +119,13 @@ nav ul li:hover a:active {
 
 @media (max-width: 768px) {
     body>header h1 {
-        font-size: 1.1rem;
-    }
-    nav ul li {
         font-size: 1rem;
     }
-    nav ul li:active {
+    nav ul li {
         font-size: 0.9rem;
+    }
+    nav ul li:active {
+        font-size: 0.8rem;
     }
 }
 
@@ -135,13 +135,13 @@ nav ul li:hover a:active {
     }
 
     body>header {
-        width: 100vw;
+        width: 100%;
         position: fixed;
         top: unset;
         bottom: 0;
         display: grid;
         justify-content: unset;
-        grid-template-columns: 3fr 1fr 3fr;
+        grid-template-columns: 4fr 2fr;
         align-items: center;
         justify-items: center;
     }
@@ -187,7 +187,7 @@ nav ul li:hover a:active {
         position: fixed;
         left: 0;
         bottom: calc(-1 * var(--mobile-menu-height));
-        width: 100vw;
+        width: 100%;
         flex-direction: column;
         justify-content: flex-start;
         background-color: var(--almost-black);
@@ -203,10 +203,10 @@ nav ul li:hover a:active {
         height: var(--mobile-menu-item-height);
         line-height: var(--mobile-menu-item-height);
         font-size: calc(var(--mobile-menu-item-height) * 0.4);
-        padding: unset;
+        padding-right: var(--page-side-padding);
         flex-grow: 1;
         flex-shrink: 1;
-        text-align: center;
+        text-align: right;
     }
     nav ul li:active {
         font-size: calc(var(--mobile-menu-item-height) * 0.35);
